@@ -180,15 +180,18 @@ IF(NOT DEFINED _USE_HOSTING_SERVICE_CMAKE_)
 		)
 
 	    IF(SOURCE_VERSION_CONTROL STREQUAL "git")
+		MESSAGE("CHANGE_SUMMARY=${CHANGE_SUMMARY}")
 		ADD_CUSTOM_TARGET(tag
 		    COMMAND git tag -a -m "${CHANGE_SUMMARY}" "${PRJ_VER}" HEAD
 		    COMMENT "Tagging the source as ver ${PRJ_VER}"
+		    VERBATIM
 		    )
 		ADD_DEPENDENCIES(tag version_check)
 	    ELSEIF(SOURCE_VERSION_CONTROL STREQUAL "hg")
 		ADD_CUSTOM_TARGET(tag
 		    COMMAND hg tag -m "${CHANGE_SUMMARY}" "${PRJ_VER}"
 		    COMMENT "Tagging the source as ver ${PRJ_VER}"
+		    VERBATIM
 		    )
 		ADD_DEPENDENCIES(tag version_check)
 	    ELSEIF(SOURCE_VERSION_CONTROL STREQUAL "svn")
@@ -196,6 +199,7 @@ IF(NOT DEFINED _USE_HOSTING_SERVICE_CMAKE_)
 		    ADD_CUSTOM_TARGET(tag
 			COMMAND svn copy "${SOURCE_BASE_URL}/trunk" "${SOURCE_BASE_URL}/tags/${PRJ_VER}" -m "${CHANGE_SUMMARY}"
 			COMMENT "Tagging the source as ver ${PRJ_VER}"
+			VERBATIM
 			)
 		ENDIF(DEFINED SOURCE_BASE_URL)
 		ADD_DEPENDENCIES(tag version_check)
@@ -203,6 +207,7 @@ IF(NOT DEFINED _USE_HOSTING_SERVICE_CMAKE_)
 		ADD_CUSTOM_TARGET(tag
 		    COMMAND cvs tag "${PRJ_VER}"
 		    COMMENT "Tagging the source as ver ${PRJ_VER}"
+		    VERBATIM
 		    )
 		ADD_DEPENDENCIES(tag version_check)
 	    ENDIF(SOURCE_VERSION_CONTROL STREQUAL "git")
